# SerialCppRaytracer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  test
config/: default.rt  high.rt  low.rt
doc/html/: _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp_source.html  annotated.html  bounding__box_8hpp.html  bounding__box_8hpp__dep__incl.map  bounding__box_8hpp__dep__incl.md5  bounding__box_8hpp__incl.map  bounding__box_8hpp__incl.md5  bounding__box_8hpp_source.html  bvh_8hpp.html  bvh_8hpp__dep__incl.map  bvh_8hpp__dep__incl.md5  bvh_8hpp__incl.map  bvh_8hpp__incl.md5  bvh_8hpp_source.html  camera_8hpp.html  camera_8hpp__dep__incl.map  camera_8hpp__dep__incl.md5  camera_8hpp__incl.map  camera_8hpp__incl.md5  camera_8hpp_source.html  checker_8hpp.html  checker_8hpp__dep__incl.map  checker_8hpp__dep__incl.md5  checker_8hpp__incl.map  checker_8hpp__incl.md5  checker_8hpp_source.html  class_b_b-members.html  class_b_b.html  classbvh__node-members.html  classbvh__node.html  classbvh__node__coll__graph.md5  classbvh__node__inherit__graph.map  classcamera-members.html  classcamera.html  classchecker-members.html  classchecker.html  classchecker__coll__graph.md5  classchecker__inherit__graph.map  classcube-members.html  (+332 more)
include/: config_parser.hpp  default.rt  timer.hpp  utilities.hpp  vec3.hpp
include/materials/: diffuse.hpp  diffuse_light.hpp  glass.hpp  isotropic.hpp  material.hpp  metal.hpp
include/objects/: bounding_box.hpp  bvh.hpp  cube.hpp  hit.hpp  hit_list.hpp  iso_fog.hpp  mesh.hpp  moving_sphere.hpp  rectangle.hpp  sphere.hpp  (+5 more)
(+93 files in other folders)
